2006-05-13  Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/custom.xsl, client/help/C/pioneers.xml,
	client/help/C/Makefile.am: Manual updates. Manual conversion to html
	and htmlhelp added.
	
2006-05-09  Bas Wijnen <shevek@fmf.nl>
	* docs/pioneers-meta-server.6: Updated.

2006-05-02  Bas Wijnen <shevek@fmf.nl>
	* client/gtk/interface.c, client/gtk/plenty.c, client/gtk/frontend.h:
	Disable Ok button in Year of Plenty dialog when too few resources are
	selected.
	* server/pregame.c, client/callback.h, client/gtk/name.c,
	client/gtk/frontend.h, client/gtk/offline.c, client/gtk/connect.c,
	client/gtk/identity.c, client/common/client.c, client/common/client.h,
	client/common/callback.c, client/ai/ai.c: Allow players to connect as
	viewer.

2006-04-30  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c, server/gtk/main.c, server/main.c, po/POTFILES.in,
	client/gtk/offline.c, client/ai/ai.c: Use GOptionContext for command
	line parsing
	* editor/gtk/editor.c: Make the last loaded/saved game persistent

2006-04-25  Roland Clobus <rclobus@bigfoot.com>
	* README.Cygwin: Updated for Subversion
	* client/gtk/gui.c: Message window as editable

2006-04-23  Roland Clobus <rclobus@bigfoot.com>
	* docs/README.release: Added a small guide for the steps needed to 
	make a release
	
2006-04-21  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/common_gtk.h, common/gtk/common_gtk.c,
	client/gtk/callbacks.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/trade.c, client/gtk/chat.c: Easier /beep
	* client/gtk/player.c: Make disconnected icon symmetrical.
	
2006-04-18  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, common/gtk/common_gtk.c, common/cost.c,
	common/game.c, common/map.c, server/gtk/main.c, server/meta.c,
	server/server.c, client/gtk/interface.c, client/gtk/resource-table.c,
	client/gtk/frontend.c, client/gtk/name.c, client/gtk/gold.c,
	client/gtk/resource.c, client/gtk/player.c, client/gtk/develop.c,