@@ -545,6 +545,8 @@ gboolean mode_pre_game(Player * player, gint event)
 			} else if (state == (StateFunc) mode_setup) {
 				if (game->double_setup)
 					strcpy(prevstate, "SETUPDOUBLE");
+				else if (game->reverse_setup)
+					strcpy(prevstate, "RSETUP");
 				else
 					strcpy(prevstate, "SETUP");
 				/* If player is selecting gold, the state 
@@ -645,10 +647,16 @@ gboolean mode_pre_game(Player * player, gint event)
 			sm_send(sm, "OK\n");
 
 			/* Some player was in the setup phase */
-			if (game->setup_player != NULL)
-				sm_send(sm, "player %d setup\n",
-					((Player *) (game->setup_player->
-						     data))->num);
+			if (game->setup_player != NULL && (Player *)game->setup_player->data != player) {
+				gint num = ((Player *) (game->setup_player->
+						     data))->num;
+				if (game->double_setup)
+					sm_send(sm, "player %d setup-double\n",
+							num);
+				else
+					sm_send(sm, "player %d setup %d\n", num,
+						game->reverse_setup);
+			}
 
 			if (recover_from_plenty) {
 				sm_send(sm, "plenty %R\n",
